2006-02-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Updated to use gen_server
	behaviour and ejabberd supervision tree

2006-02-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Added a supervisor for conference room
	processes
	* src/mod_muc/mod_muc_room.erl: Likewise

2006-01-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/odbc/pg.sql: Fixed syntax error

2006-01-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Updated to use gen_server behaviour
	* src/ejabberd_sm.erl: Likewise
	* src/ejabberd_s2s.erl: Likewise
	* src/gen_iq_handler.erl: Likewise

	* src/ejabberd_sup.erl: Added supervisor for ejabberd_receiver
	* src/ejabberd_receiver.erl: Updated

2006-01-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_update.erl: Support for run-time ejabberd updating
	(not completed)
	* src/ejabberd_c2s.erl: Added 'update_info' module attribute for
	testing ejabberd_update

2006-01-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Remove top-level xmlns from incoming
	stanzas
	* src/ejabberd_s2s_in.erl: Likewise
	* src/ejabberd_service.erl: Likewise

	* src/ejabberd_c2s.erl: Better error handling for stream
	compression support (thanks to Sergei Golovan)

2006-01-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Bugfix

2006-01-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl: Partially rewritten to work more
	efficiently and avoid race conditions
	* src/ejabberd_c2s.erl: Likewise

2006-01-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Cleanup

2006-01-20  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_receiver.erl: Added new debugging trace: It is now
	possible to dump the XML stream received from a client (usefull for
        client debugging).

2006-01-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/aclocal.m4: Updated for zlib support
	* src/configure.ac: Likewise
