@@ -1,3 +1,10 @@
+2006-02-02  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/configure.ac: --prefix option can now override the default
+	install dir
+	* src/configure: Likewise
+	* src/Makefile.in: Likewise
+
 2006-02-02  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_pubsub/mod_pubsub.erl: Updated to use gen_server
